--- a/cargo.toml
+++ b/cargo.toml
@@ -12,3 +12,5 @@ license = "MIT"
 [workspace.dependencies]
 email_address = "0.2.4"
 rand = "0.8.5"
+serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
