--- a/cargo.toml
+++ b/cargo.toml
@@ -14,3 +14,4 @@ email_address = "0.2.4"
 rand = "0.8.5"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
+chrono = { version = "0.4.35", features = ["serde"] }
