--- a/src-ui/Cargo.toml
+++ b/src-ui/Cargo.toml
@@ -19,12 +19,13 @@ tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = 
     "all",
 ] }
 futures = "0.3"
-gloo = { version = "0.11.0", features = ["timers", "futures"] }
+gloo = { version = "0.11.0", features = ["timers", "futures", "storage"] }
 
 email_address = { workspace = true }
 rand = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+chrono = { workspace = true }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
