--- a/share/Cargo.toml
+++ b/share/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "share"
-version.workspace = true
-edition.workspace = true
-authors.workspace = true
-repository.workspace = true
-dependencies.workspace = true
-license.workspace = true
+version = "0.0.1"
+edition = "2021"
+authors = ["Dvorak Chen"]
+repository = "https://github.com/dvorakchen/dvorak-epic-games-launcher"
+dependencies = "A better Epic Games Launcher"
+license = "MIT"
 
 [dependencies]
-serde = { workspace = true }
-serde_json = { workspace = true }
+serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
