--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.1"
 edition = "2021"
 authors = ["Dvorak Chen"]
 repository = "https://github.com/dvorakchen/dvorak-epic-games-launcher"
-dependencies = "A better Epic Games Launcher"
+description = "A better Epic Games Launcher"
 license = "MIT"
 
 [dependencies]
@@ -16,3 +16,6 @@ r2d2 = "0.8.10"
 actix-cors = "0.7.0"
 dotenv = "0.15.0"
 actix-web = "4.5.1"
+libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
+serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
