--- a/compose.yaml
+++ b/compose.yaml
@@ -14,6 +14,9 @@ services:
       target: final
     ports:
       - 8080:8080
+    environment:
+      - DATABASE_URL=./epic.db
+      - RUST_LOG=debug
 
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
